connnected login signup frontend to backend

--- a/views/user-profile.hbs
+++ b/views/user-profile.hbs
@@ -6,7 +6,7 @@
 	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
 	<section class="py-5 my-5">
@@ -16,7 +16,7 @@
 				<div class="profile-tab-nav border-right">
 					<div class="p-4">
 						<div class="img-circle text-center mb-3">
-							<img class="userimage" src="img/robo.png" alt="profileImage" class="shadow">
+							<img class="userimage" src="/images/robo.png" alt="profileImage" class="shadow">
 						</div>
 						<h4 class="text-center">Full Name</h4>
 					</div>
