--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WellnessZone - HOME</title>
-    <link rel="stylesheet" href="homepage.css" />
+    <link rel="stylesheet" href="/css/homepage.css" />
     <script
       src="https://kit.fontawesome.com/9542957272.js"
       crossorigin="anonymous"
@@ -14,7 +14,7 @@
   <body>
     <div class="box">
       <div class="logo">
-        <img src="./images/image.png" alt="Logo" />
+        <img src="/images/image.png" alt="Logo" />
         <span>WellnessZone</span>
       </div>
       <div class="container">
@@ -31,14 +31,14 @@
           <span>Support</span>
         </a>
       </div>
-      <a href="./rit/login.html">
+      <a href="/user/login">
         <div class="login">Login</div>
       </a>
     </div>
     <section class="info">
       <div class="write">
         <h1>FIND YOUR TREATMENT.</h1>
-        <a href="./rit/signup.html">
+        <a href="/user/signup">
           <button class="btn">Create Account</button>
         </a>
       </div>
@@ -112,8 +112,8 @@
       <div class="app">
         <div class="app_info">
           <h1>GET THE APP!</h1>
-          <img class="app_img" src="./images/apple.webp" alt="" />
-          <img class="app_img2" src="./images/google.webp" alt="" />
+          <img class="app_img" src="/images/apple.webp" alt="" />
+          <img class="app_img2" src="/images/google.webp" alt="" />
         </div>
         <div class="app_information">
           <h5>
