--- a/views/login.hbs
+++ b/views/login.hbs
@@ -18,8 +18,8 @@
   </style>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="./css/login.css">
-  <link rel="stylesheet" href="./../homepage.css">
+  <link rel="stylesheet" href="/css/login.css">
+  <link rel="stylesheet" href="/css/homepage.css">
   <script src="https://kit.fontawesome.com/6c21279c71.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
 
@@ -29,7 +29,7 @@
 <body> 
   <div class="box">
     <div class="logo">
-      <img src="./../images/image.png" alt="Logo" />
+      <img src="/images/image.png" alt="Logo" />
       <span>WellnessZone</span>
     </div>
     <div class="container">
@@ -46,7 +46,7 @@
         <span>Support</span>
       </a>
     </div>
-    <a href="./rit/login.html">
+    <a href="/user/login">
       <div class="login">Login</div>
     </a>
   </div>
@@ -59,13 +59,14 @@
         <i class="fa-brands fa-square-instagram fa-2x social-icon"></i>
         <i class="fa-brands fa-google-plus fa-2x social-icon"></i>
         <p>-or-</p>
-        <form class="" action="index.html" method="post">
-          <label for="">Username : </label>
-          <input type="text" name="" value="">
+        <div class="message" id="message" data-value="{{message}}"></div>
+        <form class="" action="/user/login" method="post">
+          <label for="">Email&emsp;&ensp;&nbsp;&nbsp; : </label>
+          <input type="email" name="email" placeholder="abc@example.com" required>
           <br>
           <br>
           <label for="">Password : </label>
-          <input type="password" name="" value="">
+          <input type="password" name="password" placeholder="*******" required>
           <br>
           <a href="#" class="forgot">Forgot Password</a>
           <br>
@@ -75,9 +76,10 @@
       <div class="col-lg-4 signupdiv">
         <h2>New here?</h2>
         <p>Sign up to join the community</p>
-        <a href="./signup.html"><button class="btn1 btn-dark" type="button" name="button">Sign up</button></a>
+        <a href="/user/signup"><button class="btn1 btn-dark" type="button" name="button">Sign up</button></a>
       </div>
     </div>
   </div>
 </body>
+<script src="/js/login.js"></script>
 </html>
