--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -12,9 +12,9 @@
   </style>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="./css/login.css">
-  <link rel="stylesheet" href="./css/signup.css">
-  <link rel="stylesheet" href="./../homepage.css">
+  <link rel="stylesheet" href="/css/login.css">
+  <link rel="stylesheet" href="/css/signup.css">
+  <link rel="stylesheet" href="/css/homepage.css">
   <script src="https://kit.fontawesome.com/6c21279c71.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
 
@@ -25,7 +25,7 @@
   <div class="bodybox">
     <div class="box">
         <div class="logo">
-          <img src="./../images/image.png" alt="Logo" />
+          <img src="/images/image.png" alt="Logo" />
           <span>WellnessZone</span>
         </div>
         <div class="container">
@@ -42,7 +42,7 @@
             <span>Support</span>
           </a>
         </div>
-        <a href="./rit/login.html">
+        <a href="/user/login">
           <div class="login">Login</div>
         </a>
       </div>
@@ -50,21 +50,25 @@
         <h1>Create an account</h1>
         <div class="innerContent">
             <div class="first-box">
-                <form action="">
-                    <input class="input-box" type="text" placeholder="Your Name" required>
-                    <input class="input-box" type="text" placeholder="Username" required>
-                    <input class="input-box" type="email" placeholder="Your email" required>
-                    <input class="input-box" type="password" placeholder="Create password" required>
+                <div class="message" id="message" data-value="{{message}}"></div>
+                <form id="myform" action="/user/signup" method="post">
+                    <input class="input-box" type="text" placeholder="Your Name" name="name" required>
+                    {{!-- we will implement username later --}}
+                    {{!-- <input class="input-box" type="text" placeholder="Username" name="username" required> --}}
+                    <input class="input-box" type="email" placeholder="abc@example.com" name="email" required>
+                    <input class="input-box" type="password" placeholder="Create Password" name="password" id="pass" onkeyup="verify()" required>
+                    <input class="input-box" type="password" placeholder="Confirm Password" name="confirmpassword" onkeyup="verify()" id="confirmpass" required>
                     <br>
-                    <select class="input-box selectbox" id="countrySelect" name="countrySelect">
+                    <select class="input-box selectbox" id="countrySelect" name="role" required>
                         <option class="option1 " disabled selected><b>Select Role</b></option>
-                        <option class="alloptions">User</option>
-                        <option class="alloptions">Counselor</option>
-                        <option class="alloptions">Admin</option>
-                      </select>
+                        <option class="alloptions">user</option>
+                        <option class="alloptions">counselor</option>
+                        <option class="alloptions">admin</option>
+                    </select>
                     <br><input class="inputcheckbox" type="checkbox" id="t&c">
                     <label for="t&c">I accept the terms & conditions</label>
-                    <button class="btn1 submitButton" type="submit">SIGN UP</button>
+                    <div id="warning"></div>
+                    <button class="btn1 submitButton" type="submit" id="btn">SIGN UP</button>
                 </form>
             </div>
             <div class="second-box">
@@ -79,4 +83,6 @@
       </div>
   </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script src="/js/signup.js"></script>
 </html>
