upload articles and other functions

--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -146,7 +146,7 @@ a {
 
 .info::before {
   content: "";
-  background: url("./images/medical.webp") center center / cover no-repeat fixed;
+  background: url("/images/medical.webp") center center / cover no-repeat fixed;
   position: absolute;
   top: 0px;
   left: 0px;
