--- a/views/postlogin.hbs
+++ b/views/postlogin.hbs
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WellnessZone - HOME</title>
     <link rel="stylesheet" href="/css/homepage.css" />
+    <link rel="stylesheet" href="/css/postlogin.css" />
     <script
       src="https://kit.fontawesome.com/9542957272.js"
       crossorigin="anonymous"
@@ -19,29 +20,37 @@
         <span>WellnessZone</span>
       </div>
       <div class="container">
-        <a href="#">
-          <span>Counsellor</span>
-        </a>
-        <a href="#">
-          <span>Admin</span>
-        </a>
-        <a href="#">
-          <span>Consumer</span>
-        </a>
-        <a href="#">
-          <span>Support</span>
-        </a>
+        <div class="search">
+      <input id="search_article" type="text" placeholder="Search Articles"  onkeyup="searchfun()">
+    </div>
+    <button class="search_btn">Search</button>
       </div>
-      <a href="/user/login">
-        <div class="login">Login</div>
+      <div class="container1">
+      <a href="" style="pointer-events: none;">
+        <a href="/user/getuploadArticle">
+            <button class="button">
+                <span>Upload Article</span>
+            </button>
+        </a>
+        <a href="#">
+            <button class="button">
+                <span>Chat</span>
+            </button>
+        </a>
+        <a href="/user/profileShow">
+            <button class="button">
+                <span>Profile</span>
+        </button>
+        </a>
+        <a href="/user/logout">
+        <div class="login">SignOut</div>
+        </a>
       </a>
+    </div>
     </div>
     <section class="info">
       <div class="write">
         <h1>FIND YOUR TREATMENT.</h1>
-        <a href="/user/signup">
-          <button class="btn">Create Account</button>
-        </a>
       </div>
     </section>
     <div class="review">
