--- a/views/user-profile.hbs
+++ b/views/user-profile.hbs
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Account Settings UI Design</title>
+	<link rel="icon" href="/images/titlelogo.png">
 	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
