--- a/public/css/article.css
+++ b/public/css/article.css
@@ -14,6 +14,7 @@
   border: 1px solid #fafafa;
   width: 100%;
   max-width: 1000px;
+  padding: 10px;
 }
 .body {
   text-align: center;
@@ -32,7 +33,6 @@
   font-weight: bold;
 }
 .article_para {
-  text-align: justify;
   margin-left: 15px;
   margin-right: 15px;
   text-align: initial;
@@ -41,9 +41,19 @@
   letter-spacing: -0.003em;
   line-height: 32px;
   font-family: "Baloo Bhai 2", cursive;
+  text-align: justify;
 }
-.article_image {
+
+.mainContent {
+  padding: 2% 10%;
   width: 100%;
+  margin-top: 0px;
+  height: 100%;
+}
+
+.article_image {
+  width: 80%;
+  height: auto;
   margin-bottom: 50px;
 }
 .article_des {
@@ -58,4 +68,41 @@
 .dateandtime {
   margin-right: 10px;
   font-weight: 700;
+}
+
+.page{
+  margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.options{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.reviewform{
+  display: inline;
+  margin: 0px 20px;
+}
+
+.reviewbtn{
+  width: 300px;
+  height: 40px;
+  border-radius: 20px;
+}
+
+.reviewbtn:hover{
+  transform:scale(1.025,1.025);
+  -webkit-transform:scale(1.025,1.025);
+  -moz-transform:scale(1.025,1.025);
+}
+
+#accept{
+  background-color: green;
+}
+
+#reject{
+  background-color: red;
 }
