--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -64,6 +64,11 @@ a {
   width: 45px;
   margin-top: 4px;
   max-height: 70px;
+  text-decoration: none;
+}
+
+.logo:hover{
+  color: white;
 }
 
 .logo img {
@@ -87,7 +92,7 @@ a {
   display: flex;
   flex-flow: row nowrap;
   height: 100%;
-  justify-content: flex-end;
+  /* justify-content: flex-end; */
   margin: 0px;
   padding: 0px;
   position: relative;
