--- a/views/forgotpassword.html
+++ b/views/forgotpassword.html
@@ -30,10 +30,10 @@
 </head>
 <body> 
   <div class="box">
-    <div class="logo">
-      <img src="./../images/image.png" alt="Logo" />
+    <a href="/user/home" class="logo">
+      <img src="/images/image.png" alt="Logo" />
       <span>WellnessZone</span>
-    </div>
+    </a>
     <div class="container">
       <a href="#">
         <span>Counsellor</span>
