--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -14,10 +14,10 @@
   </head>
   <body>
     <div class="box">
-      <div class="logo">
+      <a href="/" class="logo">
         <img src="/images/image.png" alt="Logo" />
         <span>WellnessZone</span>
-      </div>
+      </a>
       <div class="container">
         <a href="#">
           <span>Counsellor</span>
