--- a/views/login.hbs
+++ b/views/login.hbs
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="icon" href="/images/titlelogo.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Login</title>
   <style>
     body{
       padding: 30px;
@@ -23,10 +23,10 @@
 </head>
 <body> 
   <div class="box">
-    <div class="logo">
-      <img src="/images/image.png" alt="Logo" />
-      <span>WellnessZone</span>
-    </div>
+    <a href="/" class="logo">
+        <img src="/images/image.png" alt="Logo" />
+        <span>WellnessZone</span>
+      </a>
     <div class="container">
       <a href="#">
         <span>Counsellor</span>
