--- a/views/postlogin.hbs
+++ b/views/postlogin.hbs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="icon" href="/images/titlelogo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WellnessZone - HOME</title>
+    <title>Articles</title>
     <link rel="stylesheet" href="/css/homepage.css" />
     <link rel="stylesheet" href="/css/postlogin.css" />
     <link rel="stylesheet" href="/css/articlesshow.css">
@@ -17,16 +17,16 @@
   </head>
   <body>
     <div class="box">
-      <div class="logo">
+      <a href="/user/home" class="logo">
         <img src="/images/image.png" alt="Logo" />
         <span>WellnessZone</span>
+      </a>
+      <form class="container" action="/article/searcharticle"  method="POST" >
+      <div class="search">
+        <input id="search_article" type="text" placeholder="Search Articles" onkeyup="searchfun()" name="searchfield">
       </div>
-      <div class="container">
-        <div class="search">
-      <input id="search_article" type="text" placeholder="Search Articles"  onkeyup="searchfun()">
-    </div>
-    <button class="search_btn">Search</button>
-      </div>
+      <button class="search_btn" type="submit" value="submit">Search</button>
+    </form>
       <div class="container1">
       <a href="" style="pointer-events: none;">
         <p style="display:none" id="disablingbtn">{{isAdmin}}</p>
@@ -57,19 +57,20 @@
     </div>
     </div>
     <section class="info">
-      <form class="write" action="" method="post" id="articleclick">
-        <input type="hidden">
+      {{#each articles}}
+      <form class="write" action="/article/{{this._id}}" method="post" id="articleclick{{@index}}" onclick="submitform({{@index}})">
         <div class="heading">
           <div class="subjectauthor">
-            <h2 class="subject"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia, voluptatem nihil! Explicabo error laborum reprehenderit ab beatae, necessitatibus itaque aperiam?This is the heading of the article</h2>
-            <p class="author">By Priyanshu singh on 30-06-2023</p>
+            <h2 class="subject">{{this.heading}}</h2>
+            <p class="author">By {{this.user.name}} on {{this.date}}</p>
           </div>
           <div class="pic">
-            <img src="/images/image.png" alt="Logo" />
+            <img src="\\{{this.articleImage}}" alt="Logo" />
           </div>
         </div>
-        <p class="article">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus delectus, quae sint ex error, at earum laboriosam tenetur ab fugit eius alias blanditiis assumenda modi laborum veniam dolore facere vero dolor obcaecati vitae totam quod. Possimus in aliquam distinctio explicabo, sapiente dolorem pariatur voluptatum consequuntur cum quam ipsa quidem commodi voluptatem, fugit, amet provident veritatis maiores adipisci ut quis nulla alias optio repellat! Ratione illum officiis, dolorem veniam aliquam obcaecati impedit esse nesciunt maxime laboriosam odit quisquam iusto dolores quidem dolor? Sit facilis corrupti esse natus exercitationem impedit necessitatibus, modi nihil suscipit sint, vel, doloribus itaque ipsum eveniet vero sequi? . . . . . . . .</p>    
+        <p class="article" id="articlespara{{@index}}">{{this.discription}}</p>    
       </form>
+      {{/each}}
     </section>
     <div class="review">
       <div class="box2">
