--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="icon" href="/images/titlelogo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WellnessZone - HOME</title>
     <link rel="stylesheet" href="/css/homepage.css" />
@@ -13,10 +14,10 @@
   </head>
   <body>
     <div class="box">
-      <div class="logo">
+      <a href="/" class="logo">
         <img src="/images/image.png" alt="Logo" />
         <span>WellnessZone</span>
-      </div>
+      </a>
       <div class="container">
         <a href="#">
           <span>Counsellor</span>
