--- a/views/articlesUpload.hbs
+++ b/views/articlesUpload.hbs
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="icon" href="/images/titlelogo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Articles</title>
+    <title>Upload Article</title>
     <link rel="stylesheet" href="/css/homepage.css" />
     <link rel="stylesheet" href="/css/postlogin.css" />
-    <link rel="stylesheet" href="/css/articlesshow.css">
+    <link rel="stylesheet" href="/css/articlesUpload.css">
     <script
       src="https://kit.fontawesome.com/9542957272.js"
       crossorigin="anonymous"
@@ -21,7 +21,7 @@
         <img src="/images/image.png" alt="Logo" />
         <span>WellnessZone</span>
       </a>
-      <form class="container" action="/article/searcharticle"  method="POST" >
+      <form class="container" action="/article/searcharticle" method="POST">
       <div class="search">
         <input id="search_article" type="text" placeholder="Search Articles" onkeyup="searchfun()" name="searchfield">
       </div>
@@ -31,46 +31,49 @@
       <a href="" style="pointer-events: none;">
         <p style="display:none" id="disablingbtn">{{isAdmin}}</p>
         <a href="/admin/reviewarticles" id="reviewbtn">
-            <button class="button">
-                <span>Review Article</span>
-            </button>
+          <button class="button">
+            <span>Review Article</span>
+          </button>
         </a>
         <a href="/user/getuploadArticle">
-            <button class="button">
-                <span>Upload Article</span>
-            </button>
+          <button class="button">
+            <span>Upload Article</span>
+          </button>
         </a>
         <a href="#">
-            <button class="button">
-                <span>Chat</span>
-            </button>
+          <button class="button">
+            <span>Chat</span>
+          </button>
         </a>
         <a href="/user/profileShow">
-            <button class="button">
-                <span>Profile</span>
-        </button>
+          <button class="button">
+            <span>Profile</span>
+          </button>
         </a>
         <a href="/user/logout">
-        <div class="login">SignOut</div>
+          <div class="login">SignOut</div>
         </a>
       </a>
     </div>
     </div>
     <section class="info">
-      {{#each articles}}
-      <form class="write" action="/article/{{this._id}}" method="post" id="articleclick{{@index}}" onclick="submitform({{@index}})">
-        <div class="heading">
-          <div class="subjectauthor">
-            <h2 class="subject">{{this.heading}}</h2>
-            <p class="author">By {{this.user.name}} on {{this.date}}</p>
-          </div>
-          <div class="pic">
-            <img src="\\{{this.articleImage}}" alt="Logo" />
-          </div>
-        </div>
-        <p class="article" id="articlespara{{@index}}">{{this.discription}}</p>    
-      </form>
-      {{/each}}
+      <div class="articleform">
+        <h1>Upload Article</h1>
+        <form action="/article/createArticle" method="POST" enctype="multipart/form-data">
+            <input type="text" class="input" name="heading" placeholder="Subject of Article">
+            <textarea name="discription" style="overflow:auto" class="input" id="" cols="30" rows="9" placeholder="Description"></textarea>
+            <input type="text" class="input" name="tags" placeholder="Enter tags for search filter">
+            <div class="input image"><span>Add a picture: </span><input type="file" name="image" accept="image/*" style="width: 174px;"></div>
+            <div >
+              <div style="width: 376px; margin: auto">
+                Note:<br>
+              1. Add space between different tags to use in tag input.<br>
+              2. Your article will be sent for review to counsellors.
+              </div>
+            </div>
+            <button type="submit" value="submit" class="input" id="btn">Upload</button>
+        </form>
+    </div>
     </section>
     <div class="review">
       <div class="box2">
@@ -165,6 +168,6 @@
         </div>
       </div>
     </div>
-    <script src="/js/articlesclick.js"></script>
   </body>
+  <script src="/js/articlesclick.js"></script>
 </html>
