--- a/views/login.hbs
+++ b/views/login.hbs
@@ -3,15 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="icon" href="/images/titlelogo.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Login</title>
   <style>
-    /* .navbar{
-      position: fixed;
-      display: flex;
-      flex-direction: row nowrap;
-      display: inline-flex;
-    } */
     body{
       padding: 30px;
     }
@@ -28,10 +23,10 @@
 </head>
 <body> 
   <div class="box">
-    <div class="logo">
-      <img src="/images/image.png" alt="Logo" />
-      <span>WellnessZone</span>
-    </div>
+    <a href="/" class="logo">
+        <img src="/images/image.png" alt="Logo" />
+        <span>WellnessZone</span>
+      </a>
     <div class="container">
       <a href="#">
         <span>Counsellor</span>
