--- a/views/reviewArticles.hbs
+++ b/views/reviewArticles.hbs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="icon" href="/images/titlelogo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Articles</title>
+    <title>WellnessZone - HOME</title>
     <link rel="stylesheet" href="/css/homepage.css" />
     <link rel="stylesheet" href="/css/postlogin.css" />
     <link rel="stylesheet" href="/css/articlesshow.css">
@@ -21,11 +21,11 @@
         <img src="/images/image.png" alt="Logo" />
         <span>WellnessZone</span>
       </a>
-      <form class="container" action="/article/searcharticle"  method="POST" >
+      <form class="container" method="post" action="/admin/searchreview">
       <div class="search">
-        <input id="search_article" type="text" placeholder="Search Articles" onkeyup="searchfun()" name="searchfield">
+        <input id="search_article" type="text" placeholder="Search Review Articles" onkeyup="searchfun()" name="searchfield">
       </div>
-      <button class="search_btn" type="submit" value="submit">Search</button>
+      <button class="search_btn" type="submit">Search</button>
     </form>
       <div class="container1">
       <a href="" style="pointer-events: none;">
@@ -58,7 +58,8 @@
     </div>
     <section class="info">
       {{#each articles}}
-      <form class="write" action="/article/{{this._id}}" method="post" id="articleclick{{@index}}" onclick="submitform({{@index}})">
+      <form class="write" action="/admin/getSingleArticles" method="post" id="articleclick{{@index}}" onclick="submitform({{@index}})">
+        <input type="hidden" value="{{this._id}}" name="articleid">
         <div class="heading">
           <div class="subjectauthor">
             <h2 class="subject">{{this.heading}}</h2>
