group chat feature added

--- a/views/postlogin.hbs
+++ b/views/postlogin.hbs
@@ -40,7 +40,7 @@
                 <span>Upload Article</span>
             </button>
         </a>
-        <a href="#">
+        <a href="/chat/room?username={{name}}&room={{room}}">
             <button class="button">
                 <span>Chat</span>
             </button>
