--- a/views/chat.hbs
+++ b/views/chat.hbs
@@ -7,15 +7,15 @@
     <link rel="icon" href="/images/titlelogo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Group Chat</title>
-    {{!-- <link rel="stylesheet" href="/css/homepage.css" />
+    <link rel="stylesheet" href="/css/homepage.css" />
     <link rel="stylesheet" href="/css/postlogin.css" />
-    <link rel="stylesheet" href="/css/articlesshow.css"/> --}}
-    <link rel="stylesheet" href="/css/chat.css"/>
+    <link rel="stylesheet" href="/css/articlesshow.css" />
+    <link rel="stylesheet" href="/css/chat.css" />
     <script src="https://kit.fontawesome.com/9542957272.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    {{!-- <div class="box">
+    <div class="box">
         <a href="/user/home" class="logo">
             <img src="/images/image.png" alt="Logo" />
             <span>WellnessZone</span>
@@ -50,7 +50,7 @@
                 </a>
             </a>
         </div>
-    </div> --}}
+    </div>
 
     <div class="chat">
         <div id="sidebar" class="chat__sidebar">
@@ -62,7 +62,7 @@
             <div class="compose">
                 <form id="message-form">
                     <input name="message" placeholder="Message" required autocomplete="off">
-                    <button>Send</button>
+                    <button id="send-button">Send</button>
                 </form>
                 <button id="send-location">Send location</button>
             </div>
